--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"autoload": {
 		"classmap": [
-			"core/src"
+			"core/src",
+			"core/Test"
 		],
 		"files": [
 			"core/init.php"
@@ -22,5 +23,4 @@
 	"require": {
 		"php": ">=7.2.0"
 	}
-
 }
